<resources>

    <!-- Admob Config Here -->
    <string name="admob_app_id" translatable="false">@string/lib_crs_admob_app_id</string>
    <string name="native_admob_id">@string/lib_crs_admob_native_id</string>
    <string name="full_admob_id">@string/lib_crs_admob_full_id</string>

    <string name="app_name">Gallery</string>
    <string name="load_gallery_failed">Can not load files from your gallery.</string>
    <string name="security">Security</string>
    <string name="set_as_default_library">Set as default library</string>
    <string name="feedback">Feedback</string>
    <string name="version">Version</string>
    <string name="search">Search...</string>
    <string name="no_file_found">No File found!</string>
    <string name="please_select_media_for">Please select media for</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="loading">Loading</string>
    <string name="selecting">Selecting</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="set_picture_as">Set picture as</string>
    <string name="open_with">Open With</string>
    <string name="rename">Rename</string>
    <string name="media_info">Media Info</string>
    <string name="filename">Filename</string>
    <string name="last_modified">Last modified</string>
    <string name="size">Size</string>
    <string name="filetype">File Type</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="path">Path</string>
    <string name="duration">Duration</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="unsuccessfully">unsuccessfully</string>
    <string name="successfully">successfully</string>
    <string name="confirm_delete_dialog">Are you sure you want to permanently delete file(s)?</string>
    <string name="confirm_delete_album_dialog">Are you sure you want to permanently delete this album?</string>
    <string name="select_album">Select Album</string>
    <string name="no_album_found">No Album found!</string>
    <string name="enter_album_name">Enter Album Name</string>
    <string name="please_enter_name_of_album">Please enter name of album!</string>
    <string name="cannot_edit_photo">Can not edit this photo!</string>
    <string name="save_photo">Save photo</string>
    <string name="confirm_save_to_storage_dialog">Are you sure you want to save to the internal storage?</string>
    <string name="clear">Clear</string>
    <string name="enter_text">Enter text</string>
    <string name="color_picker">Color Picker</string>
    <string name="favourite">Favourite</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="photo_tittle">Photo</string>
    <string name="video_tittle">Video</string>
    <string name="folder">Folder</string>
    <string name="select_item">Select Item</string>
    <string name="setting">Setting</string>
    <string name="day_view">Day view</string>
    <string name="month_view">Month view</string>
    <string name="save">Save</string>
    <string name="fix">FIT IMAGE</string>
    <string name="crop_1_1">1:1</string>
    <string name="crop_2_3">2:3</string>
    <string name="crop_3_2">3:2</string>
    <string name="crop_4_5">4:5</string>
    <string name="crop_5_4">5:4</string>
    <string name="crop_5_7">5:7</string>
    <string name="item">Items</string>
    <string name="video_not_found">Video not found</string>
    <string name="play_video">Play Video</string>
    <string name="creat_new_folder">Creat new folder</string>
    <string name="name_is_too_long">Name is too long</string>
    <string name="file_name_empty">Name is not empty</string>
    <string name="file_name_error">File name error</string>
    <string name="file_name_error2">File name error, please choose other name</string>
    <string name="file_name_exist">File name exits !</string>
    <string name="add_folder_success">Add folder successfully</string>
    <string name="move_to_folder">Move to folder</string>
    <string name="coppy_to_folder">Copy to folder</string>
    <string name="msg_need_write">This app needs read, write settings permission to use this feature, please allow us to access media on your device.</string>
    <string name="allow">allow</string>
    <string name="rationale_read">This app needs access permission to work correctly</string>
    <string name="needsaccess">Write Access Required</string>
    <string name="needsaccesssummary">Please choose the root directory of</string>
    <string name="needsaccesssummary1">to grant write access to operate</string>
    <string name="open">Open</string>
    <string name="skip">Skip</string>
    <string name="copy_low_memory">Running out of memory, please clear some RAM</string>
    <string name="set_as">Set wallpaper</string>
    <string name="home_screen">Home screen</string>
    <string name="lockscreen">Lock Screen</string>
    <string name="home_and_lock">Home and Lock screens</string>
    <string name="set_wall">Set Wallpaper</string>
    <string name="set_wall_message">Do you want to set live wallpaper, all wallpaper screen on device will be remove?</string>
    <string name="set_wall_message_fisrt">Do you want to set live wallpaper ?</string>
    <string name="set_image_message">Are you want to set this image to home screen and lock screen?</string>
    <string name="set_lockscreen_message">Are you want to set this image to lock screen?</string>
    <string name="set_homeScreen_message">Are you want to set this image to home screen?</string>
    <string name="please_wait">Please wait</string>
    <string name="set_wall_success">Set wallpaper successfully!</string>
    <string name="store">Storage</string>
    <string name="please_set">Please set this app is default</string>
    <string name="save_photo_success">Save image successfully !</string>
    <string name="resolution">Resolution</string>
    <string name="text_cannot_blank">Text cannot be blank</string>
    <string name="add">Add</string>



    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="tone">Tone</string>
    <string name="warmth">Warmth</string>
    <string name="fade">Fade</string>
    <string name="vignette">Vignette</string>
    <string name="hue">Hue</string>

    <string name="splash">Splash</string>
    <string name="imgerror">Pictures do not support!</string>
    <string name="Please">Please wait!</string>
    <string name="Confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="texture">Textture</string>
    <string name="noise">Noise</string>
    <string name="adjust">Adjust</string>

    <string name="crop">Crop</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="horizon">Horizon</string>
    <string name="vertical">Vertical</string>
    <string name="edit_sticker">Edit sticker</string>
    <string name="type_something">Type Something</string>
    <string name="color">Color</string>
    <string name="pattern">Pattern</string>
    <string name="padding">Padding</string>
    <string name="opacity">Opacity</string>
    <string name="tools">Tool</string>
    <string name="sticker">Sticker</string>
    <string name="text">Text</string>


</resources>
