<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:clickable="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/setting"
                app:titleTextColor="@color/black"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:padding="@dimen/_15sdp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:id="@+id/set_default_btn"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginStart="@dimen/_15sdp"
                android:text="@string/set_as_default_library"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:visibility="gone"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/black"
            android:padding="@dimen/_15sdp"
            android:textSize="@dimen/_13ssp"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/security"
            app:layout_constraintTop_toBottomOf="@+id/set_default_btn"
            android:id="@+id/security_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/black"
            android:padding="@dimen/_15sdp"
            android:textSize="@dimen/_13ssp"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/feedback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/security_btn"
            android:id="@+id/feedback_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedback_btn"
            android:text="@string/share"
            android:textColor="@color/black"
            android:padding="@dimen/_15sdp"
            android:textSize="@dimen/_13ssp"
            android:layout_marginStart="@dimen/_15sdp"
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/version"
            android:textColor="@color/black"
            android:padding="@dimen/_15sdp"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_share"
            android:id="@+id/version_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="#80000000"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="1.2.1"
            android:textSize="@dimen/_11ssp"
            android:paddingStart="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/version_btn"
            android:id="@+id/version_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
