<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="@dimen/_10sdp"
    android:id="@+id/bottom_content"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:paddingBottom="@dimen/_10sdp"
        android:id="@+id/set_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:text="@string/set_as"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:background="?attr/selectableItemBackground"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:textSize="@dimen/_12ssp"
        android:drawablePadding="@dimen/_5sdp"
        android:id="@+id/home_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/lock_screen"
        android:drawableTop="@drawable/ic_home_screen"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/set_textView"
        android:text="@string/home_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:background="?attr/selectableItemBackground"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:drawablePadding="@dimen/_5sdp"
        android:drawableTop="@drawable/ic_lock_screen"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:text="@string/lockscreen"
        app:layout_constraintTop_toBottomOf="@+id/set_textView"
        app:layout_constraintStart_toEndOf="@id/home_screen"
        app:layout_constraintEnd_toStartOf="@id/lock_home_screen_button"
        android:id="@+id/lock_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <TextView
        android:background="?attr/selectableItemBackground"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:id="@+id/lock_home_screen_button"
        app:layout_constraintStart_toEndOf="@id/lock_screen"
        android:drawablePadding="@dimen/_5sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:text="@string/home_and_lock"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableTop="@drawable/ic_home_lock_screen"
        app:layout_constraintTop_toBottomOf="@+id/set_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>