<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/permisson"
            app:layout_constraintBottom_toTopOf="@+id/text_store"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/store"
            android:textSize="@dimen/_25ssp"
            android:textColor="@color/black"
            android:id="@+id/text_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:lineSpacingExtra="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/text_store"
            android:text="@string/msg_need_write"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black"
            android:id="@+id/sub_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_25sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingEnd="@dimen/_12sdp"
            android:paddingStart="@dimen/_12sdp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/allow"
            android:background="@drawable/bg_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_text"
            android:id="@+id/allow_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
