<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true">

    <View
        android:id="@+id/viewTop"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

    <RelativeLayout
        android:layout_below="@+id/viewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_bottombar"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/img_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/edit_bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_bottom_menu"
        android:orientation="vertical"
        android:paddingTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_edit_exit"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_x_close"
                android:padding="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="?selectableItemBackgroundBorderless"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/edit"
                android:textStyle="bold"
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/btn_edit_save"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_save"
                android:padding="@dimen/_4sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackgroundBorderless"/>
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btn_crop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ic_crop"
                        android:layout_width="@dimen/_19sdp"
                        android:layout_height="@dimen/_19sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_crop" />

                    <TextView
                        android:id="@+id/txt_bright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/crop"
                        android:textColor="@color/white_50"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btn_rotate_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_r_right" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/left"
                        android:textColor="@color/white_50"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btn_rotate_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_r_left"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/right"
                        android:textColor="@color/white_50"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btn_flip_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_flip_2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/horizon"
                        android:textColor="@color/white_50"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/btn_flip_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_flip_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/vertical"
                        android:textColor="@color/white_50"
                        android:textSize="@dimen/_12ssp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</RelativeLayout>
